--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -1,4 +1,4 @@
-<div class="ui segment ">
+<div class="ui segment">
   <div class="ui top attached header">
     <span>แบบสอบทานระบบการควบคุมภายใน</span>
   </div>
@@ -101,8 +101,7 @@
   </div><br>
 </div>
 
-<!-- modal -->
-<!-- modal -->
+<!-- modal edit-->
 <div class="ui modal" id="modal-edit">
   <i class="close icon"></i>
   <div class="header">
@@ -111,195 +110,395 @@
   <div class="content scrolling">
     <!-- form -->
     <form class="ui form">
+      <input type="hidden" [(ngModel)]="formModal.workSheetDetailId" name="workSheetDetailId" id="workSheetDetailId">
       <!-- row 1 -->
       <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>วันที่รับ - จ่าย</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
+          <div class="ui calendar width100" id="dateOfPayForm">
+            <div class="ui input left icon">
+              <i class="time icon"></i>
+              <input [(ngModel)]="formModal.dateOfPay" name="dateOfPay" id="dateOfPay" type="text" autofocus="false" [attr.readonly]="null"
+                placeholder="dd/MM/yyyy" [attr.required]="true">
+            </div>
+          </div>
         </div>
-        <div class="two wide field ">
-          <label>วันที่รับ - จ่าย</label>
+        <div class="three wide field ">
+          <label>สถานะการ รับ - จ่าย</label>
         </div>
         <div class="four wide field ">
-          <select class="ui search dropdown">
-            <option value="0">ปัจจัยเสี่ยงงบประมาณ </option>
-            <option></option>
+          <select class="ui search dropdown" [(ngModel)]="formModal.status" name="status" id="status">
+            <option value="">กรุณาเลือก</option>
+            <option value="รับ">รับ </option>
+            <option value="จ่าย">จ่าย </option>
           </select>
         </div>
       </div>
       <!-- row 2 -->
       <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
-          <label>หน่วยงาน</label>
+        <div class="three wide field ">
+          <label>หน่วยงาน / ผู้ประกอบการ</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.departmentName" id="departmentName" name="departmentName" type="text" placeholder="dd/mm/yyyy">
         </div>
-        <div class="six wide field "></div>
+        <div class="seven wide field "></div>
       </div>
       <!-- row 3 -->
       <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
-          <label>ผู้ประกอบการ</label>
-        </div>
-        <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
-        </div>
-        <div class="six wide field "></div>
-      </div>
-      <!-- row 4 -->
-      <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>หนังสือขอเบิกแสตมป์</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.bookNumberWithdrawStamp" name="bookNumberWithdrawStamp" id="bookNumberWithdrawStamp" type="text">
         </div>
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>ลงวันที่</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="input">
+          <div class="ui calendar width100" id="dateWithdrawStampForm">
+            <div class="ui input left icon">
+              <i class="time icon"></i>
+              <input [(ngModel)]="formModal.dateWithdrawStamp" name="dateWithdrawStamp" id="dateWithdrawStamp" type="text" autocomplete="off"
+                [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- row 4 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>หนังสือส่งแสตมป์</label>
+        </div>
+        <div class="four wide field ">
+          <input [(ngModel)]="formModal.bookNumberDeliverStamp" name="bookNumberDeliverStamp" id="bookNumberDeliverStamp" type="text"
+            placeholder="dd/mm/yyyy">
+        </div>
+        <div class="three wide field ">
+          <label>ลงวันที่</label>
+        </div>
+        <div class="four wide field ">
+          <div class="ui calendar width100" id="dateDeliverStampForm">
+            <div class="ui input left icon">
+              <i class="time icon"></i>
+              <input [(ngModel)]="formModal.dateDeliverStamp" name="dateDeliverStamp" id="dateDeliverStamp" type="text" autocomplete="off"
+                [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+            </div>
+          </div>
         </div>
       </div>
       <!-- row 5 -->
       <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
-          <label>หนังสือส่งแสตมป์</label>
+        <div class="three wide field ">
+          <label>เลขที่ใบ 5 ตอน</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.fivePartNumber" name="fivePartNumber" id="fivePartNumber" type="text">
         </div>
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>ลงวันที่</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="input">
+          <div class="ui calendar width100" id="fivePartDateForm">
+            <div class="ui input left icon">
+              <i class="time icon"></i>
+              <input [(ngModel)]="formModal.fivePartDate" name="fivePartDate" id="fivePartDate" type="text" autocomplete="off" [attr.readonly]="null"
+                placeholder="dd/MM/yyyy" [attr.required]="true">
+            </div>
+          </div>
         </div>
       </div>
       <!-- row 6 -->
       <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
-          <label>เลขที่ใบ 5 ตอน</label>
+        <div class="three wide field ">
+          <label>วันที่ตรวจนับ</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
+          <div class="ui calendar width100" id="stampCheckDateForm">
+            <div class="ui input left icon">
+              <i class="time icon"></i>
+              <input [(ngModel)]="formModal.stampCheckDate" name="stampCheckDate" id="stampCheckDate" type="text" autofocus="false" [attr.readonly]="null"
+                placeholder="dd/MM/yyyy" [attr.required]="true">
+            </div>
+          </div>
         </div>
-        <div class="two wide field ">
-          <label>ลงวันที่</label>
+        <div class="three wide field ">
+          <label>ผู้ตรวจนับ</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="input">
+          <input [(ngModel)]="formModal.stampChecker" name="stampChecker" id="stampChecker" type="text">
         </div>
       </div>
       <!-- row 7 -->
       <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
-          <label>วันที่ตรวจนับ</label>
+        <div class="three wide field ">
+          <label>ประเภทแสตมป์</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.stampType" name="stampType" id="stampType" type="text">
         </div>
-        <div class="two wide field ">
-          <label>ผู้ตรวจนับ</label>
+        <div class="three wide field ">
+          <label>ชนิดแสตมป์</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="input">
+          <input [(ngModel)]="formModal.stampBrand" name="stampBrand" id="stampBrand" type="text">
         </div>
       </div>
       <!-- row 8 -->
       <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
-          <label>ประเภทแสตมป์</label>
-        </div>
-        <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
-        </div>
-        <div class="two wide field ">
-          <label>ชนิดแสตมป์</label>
-        </div>
-        <div class="four wide field ">
-          <input type="text" placeholder="input">
-        </div>
-      </div>
-      <!-- row 9 -->
-      <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>จำนวน (เล่ม)</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.numberOfBook" name="numberOfBook" id="numberOfBook" type="text">
         </div>
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>จำนวน (ดวง)</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="input">
+          <input [(ngModel)]="formModal.numberOfStamp" name="numberOfStamp" id="numberOfStamp" type="text">
         </div>
       </div>
-      <!-- row 10  -->
+      <!-- row 9  -->
       <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>มูลค่าพิมพ์ (บาท/ดวง)</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.valueOfStampPrinted" name="valueOfStampPrinted" id="valueOfStampPrinted" type="text">
         </div>
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>เลขที่ประจำเล่ม</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="input">
+          <input [(ngModel)]="formModal.serialNumber" name="serialNumber" id="serialNumber" type="text">
         </div>
       </div>
-      <!-- row 11 -->
+      <!-- row 10 -->
       <div class="inline fields  ui grid container centered">
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>ค่าภาษี (บาท)</label>
         </div>
         <div class="four wide field ">
-          <input type="text" placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.taxStamp" name="taxStamp" id="taxStamp" type="text">
         </div>
-        <div class="two wide field ">
+        <div class="seven wide field"></div>
+      </div>
+      <!-- row 11 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
           <label>รหัสแสตมป์(เริ่ม)</label>
         </div>
-        <div class="three wide field ">
-          <input type="text" placeholder="input">
+        <div class="four wide field ">
+          <input [(ngModel)]="formModal.stampCodeStart" name="stampCodeStart" id="stampCodeStart" type="text">
         </div>
-        <div class="two wide field ">
+        <div class="three wide field ">
           <label>รหัสแสตมป์(เริ่ม)</label>
         </div>
-        <div class="three wide field ">
-          <input type="text" placeholder="input">
+        <div class="four wide field ">
+          <input [(ngModel)]="formModal.stampCodeEnd" name="stampCodeEnd" id="stampCodeEnd" type="text">
         </div>
       </div>
       <!-- row 12 -->
       <div class="inline fields  ui grid container centered">
-          <div class="two wide field ">
-            <label>แนบไฟล์</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="dd/mm/yyyy">
-          </div>
-          <div class="six wide field "></div>
+        <div class="three wide field ">
+          <label>แนบไฟล์</label>
+        </div>
+        <div class="four wide field ">
+          <input [(ngModel)]="formModal.fileName" name="fileName" id="fileName" type="file">
+        </div>
+        <div class="seven wide field "></div>
       </div>
       <!-- row 13 -->
       <div class="inline fields  ui grid container centered">
-          <div class="two wide field ">
-            <label>หมายเหตุ</label>
-          </div>
-          <div class="twelve wide field ">
-              <textarea rows="2"></textarea>
-          </div>
+        <div class="three wide field ">
+          <label>หมายเหตุ</label>
+        </div>
+        <div class="twelve wide field ">
+          <textarea [(ngModel)]="formModal.note" name="note" id="note" rows="2"></textarea>
+        </div>
       </div>
-
     </form>
     <!-- form -->
+    <div class="actions"><br>
+      <div class="ui center aligned grid">
+        <button class="ui blue button" type="button" (click)="modalEditSubmit()">บันทึก</button>
+      </div>
+    </div>
   </div>
-  <div class="actions">
-    <button class="ui blue button" type="button">บันทึก</button>
-    <button class="ui grey button" type="button">ยกเลิก</button>
+</div>
+
+<!-- model detail -->
+<div class="ui modal" id="modal-detail">
+  <i class="close icon"></i>
+  <div class="header">
+      รายละเอียดข้อมูลแสตมป์
+  </div>
+  <div class="content scrolling">
+    <!-- form -->
+    <form class="ui form">
+      <!-- row 1 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>ชนิดแสตมป์/ขนาดบรรจุ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.stampBrand}}
+        </div>
+        <div class="three wide field ">
+          <label>สถานะ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.status}}
+        </div>
+      </div>
+      <!-- row 2 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>หน่วยงาน / ผู้ประกอบการ</label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.departmentName}}
+        </div>
+        <div class="three wide field ">
+          <label>วันที่รับ - จ่าย : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.dateOfPay}}
+        </div>
+      </div>
+      <!-- row 3 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>หนังสือขอเบิกแสตมป์ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.bookNumberWithdrawStamp}}
+        </div>
+        <div class="three wide field ">
+          <label>ลงวันที่</label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.dateWithdrawStamp}}
+        </div>
+      </div>
+      <!-- row 4 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>หนังสือส่งแสตมป์ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.bookNumberDeliverStamp}}
+        </div>
+        <div class="three wide field ">
+          <label>ลงวันที่</label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.dateDeliverStamp}}
+        </div>
+      </div>
+      <!-- row 5 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>เลขที่ใบ 5 ตอน : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.fivePartNumber}}
+        </div>
+        <div class="three wide field ">
+          <label>ลงวันที่ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.fivePartDate}}
+        </div>
+      </div>
+      <!-- row 6 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>วันที่ตรวจนับ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.stampCheckDate}}
+        </div>
+        <div class="three wide field ">
+          <label>ผู้ตรวจนับ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.stampChecker}}
+        </div>
+      </div>
+      <!-- row 7 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>ประเภทแสตมป์ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.stampType}}
+        </div>
+        <div class="three wide field ">
+          <label>ชนิดแสตมป์ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.stampBrand}}
+        </div>
+      </div>
+      <!-- row 8 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>จำนวน (เล่ม) : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.numberOfBook}}
+        </div>
+        <div class="three wide field ">
+          <label>จำนวน (ดวง) : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.numberOfStamp}}
+        </div>
+      </div>
+      <!-- row 9  -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>มูลค่าพิมพ์ (บาท/ดวง): </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.valueOfStampPrinted}}
+        </div>
+        <div class="seven wide field"></div>
+      </div>
+      <!-- row 10 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>เลขที่ประจำเล่ม : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.serialNumber}}
+        </div>
+        <div class="seven wide field"></div>
+      </div>
+      <!-- row 11 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field center aligned ">
+          <label>แนบไฟล์ : </label>
+        </div>
+        <div class="four wide field ">
+          {{formModal.fileName}}
+        </div>
+        <div class="seven wide field "></div>
+      </div>
+      <!-- row 12 -->
+      <div class="inline fields  ui grid container centered">
+        <div class="three wide field ">
+          <label>หมายเหตุ</label>
+        </div>
+        <div class="twelve wide field ">
+          {{formModal.note}}
+        </div>
+      </div>
+    </form>
+    <!-- form -->
   </div>
 </div>
